[package]
name = "kv-test"
version = "0.1.0"
authors = ["asonix <asonix.dev@gmail.com>"]

[dependencies]
env_logger = "0.5"
log = "0.4"
rmp-serde = "0.13"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
toml = "0.4"

[dependencies.kv]
version = "0.6"
features = [ "bincode-value", "cbor-value", "json-value" ]
